--- a/今天这个仇先记下来/public/index.html
+++ b/今天这个仇先记下来/public/index.html
@@ -58,7 +58,7 @@
       <img width="100%" src="jichou.png" alt="记仇">
       <!-- </div> -->
       <div contenteditable="true" class="write">
-        2018年5月18日，没人给我点赞，这个仇我先记下来了
+        2018年5月19日，晴，明天就是520了，群里的人都订好了酒店房间,准备明天大干一场,只有我还在这里写日记,委屈的泪不自觉地流下来，这个仇我记下了
       </div>
     </div>
     <a id="btn">保存</a>
